Sat Nov 21 12:51:27 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm: Bump version in preparation for snapshot.

Fri Nov 20 22:37:38 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* bin/mj_email (connect_and_parse): Send the user along with the
 	connect request; if the result is not favorable, exit gracefully
 	and quietly.

	* lib/Majordomo.pm (connect): Take a user (default to anonymous)
 	and return the stripped version if the caller wants it.  If the
 	passed address is not legal, return 'undef' for a session ID.

	* bin/mj_email (connect_no_parse): Send an anonymous user along
 	with the connect request.

Tue Nov 17 00:06:34 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Config.pm (compile_pattern): Add shell-like patterns.

	* Makefile.PL (configure): Fix typo.

	* lib/Mj/Addr.pm (match): Make sure addresses being compared are
 	valid and not anonymous.

	* lib/Mj/MailOut.pm (deliver): MTA is now in the site config.

Mon Nov 16 15:40:58 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Resend.pm (_subject_prefix): New function; isolate
 	subject prefix manipulation.
	(_post): Call it.

	* lib/Mj/Format.pm (which): Clean up returned message.

	* lib/Majordomo.pm (which): Now takes general pattern.

	* lib/Mj/Config.pm (parse_taboo_body): Call compile_pattern to get
 	generic pattern support and error checking.  Make sure uncompiled
 	pattern is displayed in bounce message.
	(parse_taboo_headers): Ditto.
	(_compile_rule): Fail when parsing the pattern if $ok is false,
 	not if $err is true.

	* lib/Majordomo.pm (list_config_set): Pretty up error message.

	* lib/Mj/Config.pm (_compile_rule): Call compile_pattern to check
 	the regexp.  Accept both supported delimiters, and pattern
 	modifiers.

Sat Nov 14 15:54:59 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Config.pm (parse_delivery_rules): Allow generalized
 	patterns in address matchers.
